# jarvis-strands-github-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-ecr.yml
agents/: __init__.py  agent_cards.py  clients.py  gateway.py  registry.py  reporting.py  skills.py  standalone_app.py
agents/aws_research/: __init__.py  executor.py  research_agent.py
agents/business_intel/: __init__.py  executor.py  research_agent.py
agents/deep_intel/: __init__.py  agent.py  executor.py  reporting.py
agents/shared/: __init__.py  base_executor.py  utils.py
agents/shared/core/: __init__.py  config.py  exceptions.py  logging_config.py
agents/shared/prompts/: deep_intel_agent.md  perplexity_agent.md  tavily_agent.md
agents/shared/tools/: __init__.py  strands_tools.py
api/: __init__.py  app.py  main.py
api/routers/: health.py  research.py
examples/: input.json
orchestrator/: __init__.py  config.py  graph.py  graph_nodes.py  report.py  run.py  schemas.py  utils.py  workflow.py  workflow_nodes.py
orchestrator/agents/: __init__.py  aggregator_agent.py  dispatcher_agent.py  perplexity_agent.py  tavily_agent.py
orchestrator/core/: __init__.py  config.py  context.py
orchestrator/templates/: report.html
orchestrator/tools/: perplexity.py  strands_tools.py  tavily.py
prompts/: MASTER_ORCHESTRATOR.md  PERPLEXITY_AGENT.md  TAVILY_AGENT.md  aggregator_agent.md  dispatcher_agent.md
test/: quick_render_test.py
